# easy-viewer

./: LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
.github/workflows/: release.yml
src/: App.css  App.jsx  i18n.js  main.jsx  zookeeper.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/common_tools/: base64.rs  cmd.rs  common_constants.rs  database.rs  mod.rs  sql_lite.rs
src-tauri/src/mysql/: command.rs
src-tauri/src/service/: base_config_service.rs  clickhouse_service.rs  cmd.rs  cmd_service.rs  mod.rs  mongdb_service.rs  mssql_service.rs  mysql_common_service.rs  mysql_service.rs  oracledb_service.rs  postgresql_service.rs  query_service.rs  s3_service.rs  sqlite_service.rs
src-tauri/src/service/dump_data/: dump_database_service.rs  mod.rs  mssql_dump_data_service.rs  postgresql_dump_data_service.rs
src-tauri/src/sql_lite/: connection.rs
src-tauri/src/util/: common_utils.rs  mod.rs  sql_utils.rs
src-tauri/src/vojo/: base_config.rs  dump_database_req.rs  dump_database_res.rs  exe_sql_response.rs  get_base_config_response.rs  get_column_info_for_is_response.rs  get_object_info_res.rs  import_database_req.rs  init_dump_data_response.rs  list_node_info_req.rs  list_node_info_response.rs  mod.rs  mysql_config.rs  postgresql_config.rs  save_connection_req.rs  show_column_response.rs  sql_parse_result.rs  sqlite_config.rs  static_connections.rs  update_connection_req.rs  update_sql_response.rs
src/components/ui/: alert-dialog.jsx  button.jsx  calendar.jsx  input.jsx  sheet.jsx  tabs.jsx  toaster.jsx
src/dashboard/: page.jsx  page.tsx
src/dashboard/components/: clickhouseConfigComponent.jsx  column-resizer.tsx  deleteColumnComponent.jsx  deleteSqlComponenet.jsx  iconDiv.jsx  insertSqlComponent.jsx  mongodbConfigComponent.jsx  mssqlConfigComponent.jsx  mysqlConfigComponent.jsx  oracledbConfigComponent.jsx  postGresqlConfigComponent.jsx  s3ConfigComponenet.jsx  scorllableTable.jsx  sidebar.jsx  spinner.jsx  sqliteConfigComponent.jsx  table.tsx  tabsComponent.jsx  treeNode.jsx  updateColumnComponent.jsx
src/dashboard/components/contextMenu/: bucketNodeContextMenu.jsx  databaseNodeContextMenu.jsx  singleColumnNodeContextMenu.jsx  singleIndexNodeContextMenu.jsx  singleTableNodeContextMenu.jsx  treeRootNodeContextMenu.jsx
src/dashboard/components/dialog/: createFolderDialog.jsx  deleteBucketDialog.jsx  dropColumnDialog.jsx  dropDatabaseDialog.jsx  dropIndexDialog.jsx  dropTableDialog.jsx  truncateDatabaseDialog.jsx  truncateTableDialog.jsx
src/dashboard/components/ui/: table.tsx
src/dashboard/menu/: about-dialog.jsx  about-dialog.tsx  createConnectionDialog.jsx  createLinkDialog.jsx  createLinkDialog.tsx  helpMenu.jsx  icons.jsx  languageMenu.jsx  menu.jsx  mysqlConfigComponent.jsx  preferenceDialog.jsx  tailwind-indicator.jsx  themModeMenu.jsx
src/dashboard/page/: base64ImagePage.jsx  base64Page.jsx  base64TextPage.jsx  base64TextPage.tsx  colorPalettePage.jsx  colorPalettePage.tsx  commonDumpDataPage.jsx  cryptoPage.jsx  dataPage.jsx  diffViewerPage.jsx  diffViewerPage.tsx  digestPage.jsx  digestPage.tsx  dumpDataPage.jsx  formatJsonPage.jsx  formatJsonPage.tsx  formatPage.jsx  formatXmlPage.jsx  formatXmlPage.tsx  formatYamlPage.jsx  formatYamlPage.tsx  halfFullPage.jsx  halfFullPage.tsx  importDataPage.jsx  loadTestingPage.jsx  loadTestingPage.tsx  lskdialog.css  postgresqlDumpDataPage.jsx  propertiesColumnPage.jsx  propertiesPage.jsx  propertiesTabsPage.jsx  qrcodePage.jsx  qrcodePage.tsx  queryPage.jsx  regexPage.jsx  regexPage.tsx  s3NodeInfoPage.jsx  schemaDumpDataPage.jsx  sm2Page.jsx  sm2Page.tsx  (+9 more)
src/lib/: iconUtils.jsx  jsx-utils.js  node.jsx  utils.js
src/locales/en/: main.json
src/locales/zh/: main.json
src/styles/: globals.css
