[package]
name = "easy_viewer"
version = "0.0.1"
description = "A development tools"
authors = ["lsk"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0.94"
base64 = "0.22.1"
bigdecimal = { version = "0.4.7", features = ["serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
colorsys = { version = "*", default-features = false }
dirs = "5.0.1"
docx-rs = "0.4.17"
elasticsearch = "8.16.0-alpha.1"
futures-util = "0.3.31"
hex = "0.4.3"
human_bytes = "0.4.3"
image = "0.25.5"
itertools = "0.13.0"

linked-hash-map = "0.5.6"
log = "0.4.22"
mongodb = "3.1.0"
num = "0.4.3"
percent-encoding = "2.3.0"
redis = "0.27.6"
serde = { version = "1.0.215", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.133"
serde_repr = "0.1.19"
serde_yaml = "0.9.34"
sqlparser = "0.52.0"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "tls-native-tls",
    "mysql",
    "sqlite",
    "postgres",
    "json",
    "bigdecimal",
    "chrono",
    "uuid", 
    "ipnetwork",
    "mac_address",
    "bit-vec",
    
] }
tauri = { version = "2.1.1", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-dialog = "2.2.0"
tauri-plugin-fs = "2.2.0"
tauri-plugin-log = { version = "2.2.0" }
tauri-plugin-os = "2.2.0"
tauri-plugin-shell = "2.2.0"
time = "0.3.37"
tokio = { version = "1.42.0", features = ["full", "tracing", "time"] }
uuid = { version = "1.11.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
xlsxwriter = "0.6.1"
[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

# Optimized for bundle size. If you want faster builds comment out/delete this section.
[profile.release]
lto = "thin"
opt-level = "z"   # Optimize for size.
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
strip = true      # Automatically strip symbols from the binary.
debug = false


[env]
STATIC_VCRUNTIME = false
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.2.0"
