[package]
name = "easy_viewer"
version = "0.0.1"
description = "A development tools"
authors = ["lsk"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
anyhow = "1.0.95"
aws-config = { version = "1.5.16", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1.2.1", features = ["hardcoded-credentials"] }
aws-sdk-s3 = { version = "1.73.0", features = ["behavior-version-latest"] }
base64 = "0.22.1"
bigdecimal = { version = "0.4.7", features = ["serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
clickhouse = "0.13.1"
colorsys = { version = "*", default-features = false }
dirs = "6.0.0"
docx-rs = "0.4.17"
elasticsearch = "8.16.0-alpha.1"
futures-util = "0.3.31"
hex = "0.4.3"
human_bytes = "0.4.3"
image = "0.25.5"
itertools = "0.14.0"

linked-hash-map = "0.5.6"
log = "0.4.25"
mongodb = "3.2.1"
num = "0.4.3"
oracle = "0.6.3"
percent-encoding = "2.3.0"
redis = "0.28.2"
rust_decimal = "1.36.0"

serde = { version = "1.0.217", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.138"
serde_repr = "0.1.19"
serde_yaml = "0.9.34"
sqlparser = "0.54.0"
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "tls-native-tls",
    "mysql",
    "sqlite",
    "postgres",
    "json",
    "bigdecimal",
    "chrono",
    "uuid", 
    "ipnetwork",
    "mac_address",
    "bit-vec",
    
] }
tauri = { version = "2.2.5", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-dialog = "2.2.0"
tauri-plugin-fs = "2.2.0"
tauri-plugin-log = { version = "2.2.1" }
tauri-plugin-os = "2.2.0"
tauri-plugin-shell = "2.2.0"
tiberius = { version = "0.12.3", features = ["tds73", "chrono"] }
time = "0.3.37"
tokio = { version = "1.43.0", features = ["full", "tracing", "time"] }
tokio-util = "0.7.13"
uuid = { version = "1.13.1", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
walkdir = "2.5.0"
xlsxwriter = "0.6.1"
[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

# Optimized for bundle size. If you want faster builds comment out/delete this section.
[profile.release]
lto = "thin"
opt-level = "z"   # Optimize for size.
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
strip = true      # Automatically strip symbols from the binary.
debug = false


[env]
STATIC_VCRUNTIME = false
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.2.1"
